github repository error 수정

--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "acorn": ">=7.1.1",
+    "minimist": ">=1.2.2"
   }
 }
