--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@storybook/addon-a11y": "^5.3.17",
     "@storybook/addon-actions": "^5.3.17",
     "@storybook/addon-backgrounds": "^5.3.17",
+    "@storybook/addon-docs": "^5.3.18",
     "@storybook/addon-info": "^5.3.17",
     "@storybook/addon-knobs": "^5.3.17",
     "@storybook/addon-links": "^5.3.17",
@@ -59,6 +60,7 @@
     "@storybook/react": "^5.3.17",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
+    "acorn": ">=7.1.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-react-app": "^9.1.2",
@@ -74,6 +76,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "minimist": ">=1.2.2",
     "prettier": "^1.19.1",
     "react-docgen-typescript-loader": "^3.7.1",
     "source-map-loader": "^0.2.4",
@@ -82,8 +85,6 @@
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "acorn": ">=7.1.1",
-    "minimist": ">=1.2.2"
+    "webpack-dev-server": "^3.10.3"
   }
 }
