--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack-dev-server --mode development -p 5000",
+    "dev": "webpack-dev-server --mode development",
     "storybook": "start-storybook -p 9999",
     "cac": "node scripts/createAtomicComponent"
   },
@@ -40,6 +40,7 @@
     "eslint-import-resolver-webpack": "^0.12.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-scripts": "^3.4.1",
     "typescript": "^3.8.2"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "@storybook/addon-notes": "^5.3.17",
     "@storybook/addon-storysource": "^5.3.17",
     "@storybook/addons": "^5.3.17",
+    "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.17",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
@@ -83,7 +85,7 @@
     "storybook": "^5.3.17",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
-    "webpack": "^4.41.6",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
