--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "paths": {
       "@src/*": ["src/*"]
     },
-    "experimentalDecorators": true
   },
+  "exclude": ["node_modules", "**/node_modules/*"],
   "include": ["./src/**/*", "custom.d.ts"]
 }
