--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@storybook/react": "^5.3.17",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
-    "acorn": ">=7.1.1",
+    "acorn": "^7.3.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-react-app": "^9.1.2",
@@ -78,7 +78,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "minimist": ">=1.2.2",
+    "minimist": ">=1.2.3",
     "prettier": "^1.19.1",
     "react-docgen-typescript-loader": "^3.7.1",
     "source-map-loader": "^0.2.4",
@@ -87,6 +87,7 @@
     "ts-loader": "^6.2.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "websocket-extensions": "^0.1.4"
   }
 }
